--- a/app.yaml
+++ b/app.yaml
@@ -6,6 +6,9 @@ handlers:
 - url: /(|fetch)
   script: app.app
 
+- url: /static
+  static_dir: static
+
 libraries:
 - name: jinja2
   version: latest
